@@ -46,12 +46,12 @@ void shrikeGlInit()
 }
 
 #ifdef WIN32
-PFNGLMULTITEXCOORD2FARBPROC glMultiTexCoord1fARB = 0;
-PFNGLMULTITEXCOORD3FARBPROC glMultiTexCoord2fARB = 0;
-PFNGLMULTITEXCOORD2FARBPROC glMultiTexCoord3fARB = 0;
-PFNGLMULTITEXCOORD3FARBPROC glMultiTexCoord4fARB = 0;
-PFNGLMULTITEXCOORD2FVARBPROC glMultiTexCoord1fvARB = 0;
-PFNGLMULTITEXCOORD3FVARBPROC glMultiTexCoord2fvARB = 0;
-PFNGLMULTITEXCOORD2FVARBPROC glMultiTexCoord3fvARB = 0;
-PFNGLMULTITEXCOORD3FVARBPROC glMultiTexCoord4fvARB = 0;
+PFNGLMULTITEXCOORD1FARBPROC glMultiTexCoord1fARB = 0;
+PFNGLMULTITEXCOORD2FARBPROC glMultiTexCoord2fARB = 0;
+PFNGLMULTITEXCOORD3FARBPROC glMultiTexCoord3fARB = 0;
+PFNGLMULTITEXCOORD4FARBPROC glMultiTexCoord4fARB = 0;
+PFNGLMULTITEXCOORD1FVARBPROC glMultiTexCoord1fvARB = 0;
+PFNGLMULTITEXCOORD2FVARBPROC glMultiTexCoord2fvARB = 0;
+PFNGLMULTITEXCOORD3FVARBPROC glMultiTexCoord3fvARB = 0;
+PFNGLMULTITEXCOORD4FVARBPROC glMultiTexCoord4fvARB = 0;
 #endif
