@@ -15,7 +15,8 @@ LD = link /nologo
 CPPFLAGS = /DWIN32 /DNOMINMAX /D_USE_MATH_DEFINES
 CPPFLAGS += /DSHMEDIA_DIR=$(SHMEDIA_DIR)
 CPPFLAGS += $(INCLUDES)
-CXXFLAGS = /GR /GX /wd4003
+#CXXFLAGS = /GR /GX /wd4003
+CXXFLAGS = /GR /EHsc /wd4003
 
 RELEASE_CPPFLAGS = $(CPPFLAGS)
 RELEASE_CXXFLAGS = $(CXXFLAGS) $(RELEASE_CPPFLAGS) /MD /O2
